Imported latest guss-webfonts and typeface

--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -111,7 +111,7 @@ $fs-data: (
         18 22  // 6
 );
 
-$fs-textsans: (
+$fs-textSans: (
         12 16, // 1
         13 18, // 2
         14 20, // 3
@@ -246,3 +246,4 @@ $mem-live-accent: #cc2b12;
 $mem-live-red-trans: rgba(180, 24, 0, .95);
 
 $side-margins-top-magic-number: 114px;
+
