David Magliano faq copy changes

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -41,7 +41,7 @@
 
         <section class="help-faqs" id="what-is-membership">
             <h2 class="section-body-headline">What is Guardian Membership?</h2>
-            <p>Guardian Membership is a community of people who share our belief that the open exchange of information, ideas and opinions can change the world for the better. By signing up and paying your subscription (at Partner and Patron level), you are helping us to bring those words to life by supporting our open and independent journalism. In return, you get access to events and experiences that are only available to our members.</p>
+            <p>Guardian Membership is for you if you share our belief that the open exchange of information, ideas and opinions can change the world for the better. By signing up and paying your subscription (at Partner and Patron level), you are helping us to bring those words to life by supporting our open and independent journalism. In return, you get access to events and experiences that are only available to our members.</p>
         </section>
 
         <section class="help-faqs" id="why-join">
