--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -41,62 +41,62 @@
 
         <section class="help-faqs" id="what-is-membership">
             <h2 class="section-body-headline">What is Guardian Membership?</h2>
-            <p>Guardian Membership is for you if you share our belief that the open exchange of information, ideas and opinions can change the world for the better. By signing up and paying your subscription (at Partner and Patron level), you are helping us to bring those words to life by supporting our open and independent journalism. In return, you get access to events and experiences that are only available to our members.</p>
+            <p>Guardian Membership is for you if you share our belief that the open exchange of information, ideas and opinions can change the world for the better. By signing up and paying your subscription (at Partner and Patron level), you are helping bring these words to life by supporting open and independent journalism. In return, you get access to events and experiences that are only available to members.</p>
         </section>
 
         <section class="help-faqs" id="why-join">
             <h2 class="section-body-headline">Why should I join?</h2>
-            <p>Membership has a lot to offer, and by joining in this beta phase, you can help us build and shape Guardian Membership into one of the world’s largest communities of free thinkers. Benefits include access to our Guardian live events programme. The events range from lectures by some of the world’s foremost thinkers and talkers to exclusive screenings of the latest independent films; from Meet the journalist sessions at our offices in Kings Place to more intimate, bespoke events. Tickets are only available to Guardian members. If you want to support the Guardian and its journalism, and protect our dedication to keeping our website open and available to all, then signing up to Guardian Membership and paying your subscription is a great way to do it too.</p>
+            <p>Membership has a lot to offer, and by joining in this beta phase, you can help build and shape Guardian Membership into one of the world’s largest communities of free thinkers. Benefits include access to the Guardian live events programme. Events range from lectures by the world’s foremost thinkers to exclusive screenings of the latest independent films; from sessions with senior journalists at our offices in Kings Place to more intimate, bespoke events. Tickets are only available to Guardian members. If you want to support the Guardian and its journalism, and keep our website open to all, then joining Guardian Membership and paying your subscription is a great way to do it.</p>
         </section>
 
         <section class="help-faqs" id="how-much-does-it-cost">
             <h2 class="section-body-headline">How much does membership cost?</h2>
-            <p>The Friend tier of Guardian Membership is free. Partners pay £15 per month or £135 per year if they pay in one go. For Patrons, the cost is £60 per month or £540 per year. If you choose the annual payment you get 3 months for free.</p>
+            <p>The Friend tier of Guardian Membership is free. Partners pay £15 per month or £135 per year if you pay in one go. For Patrons, the cost is £60 per month or £540 per year. If you choose the annual payment you get 3 months free.</p>
         </section>
 
         <section class="help-faqs" id="difference-between-tiers">
             <h2 class="section-body-headline">What is the difference between a Friend, a Partner and a Patron?</h2>
-            <p>You can read a full description of each of our three membership tiers <a href="/join" class="u-underline">here</a>.</p>
+            <p>You can read a full description of each membership tier <a href="/join" class="u-underline">here</a>.</p>
         </section>
 
         <section class="help-faqs" id="why-sign-in-to-become-a-member">
             <h2 class="section-body-headline">Why do I have to sign in to the Guardian to become a member?</h2>
-            <p>We ask you to sign in so that we know who you are and ensure that we apply the correct discounts and privileges when you’re buying your tickets to one of our events - Partners and Patrons get early booking and a 20% discount on tickets to all Guardian Live events.</p>
+            <p>We ask you to sign in so we know who you are and ensure that we apply the correct discounts and privileges when you buy tickets to an event - Partners and Patrons get early booking and 20% discount on tickets to all Guardian Live events.</p>
         </section>
 
         <section class="help-faqs" id="what-is-guardian-live">
             <h2 class="section-body-headline">What is Guardian Live?</h2>
-            <p>Guardian Live is an events programme of discussions, debates, interviews and festivals that transform our journalism in print and online into live experiences. Tickets can only be booked by Guardian members.</p>
+            <p>Guardian Live is a rolling events programme of discussions, debates, interviews and festivals that transform our journalism in print and online into live experiences. Tickets can only be booked by Guardian members.</p>
         </section>
 
         <section class="help-faqs" id="can-I-buy-without-becoming-member">
             <h2 class="section-body-headline">Can I buy a ticket to a Guardian Live event without becoming a member?</h2>
-            <p>No, you won’t be able to buy a ticket to a Guardian Live event if you are not a member. Access to these events is one of the benefits we offer to our members in return for their support. Our most basic tier of membership is free.</p>
+            <p>You can only buy a ticket to a Guardian Live event if you are a member. Access to these events is one of the benefits we offer members in return for their support. Our basic tier of membership is free.</p>
         </section>
 
         <section class="help-faqs" id="can-I-buy-without-signing-in">
             <h2 class="section-body-headline">Can I buy a ticket to an event without signing in?</h2>
-            <p>No, you are required to sign in before buying tickets for Guardian Live events.</p>
+            <p>You are required to sign in before buying tickets for Guardian Live events.</p>
         </section>
 
         <section class="help-faqs" id="how-many-tickets-can-i-buy">
             <h2 class="section-body-headline">How many Guardian Live tickets can I buy for each event?</h2>
-            <p>You can buy as many tickets as you want but Partners and Patrons are entitled to two tickets at a discount. After you’ve bought your two tickets at a discount you can come back and buy as many as you want at full price. We are working on improving this so that you can buy all your tickets in one go.</p>
+            <p>You can buy as many tickets as you want. Partners and Patrons are entitled to two tickets at a discount. After you’ve bought your discounted tickets you can come back and buy as many as you want at full price. We are working to improve this so you can buy all your tickets in one go.</p>
         </section>
 
         <section class="help-faqs" id="what-events-are-upcoming">
             <h2 class="section-body-headline">How will I know what Guardian Live events are coming up?</h2>
-            <p>Our <a href="/events" class="u-underline">events listing page</a> is updated regularly and when you sign up to membership, you will receive a weekly email newsletter containing information about our latest events.</p>
+            <p>Our <a href="/events" class="u-underline">events listing page</a> is updated regularly and when you join membership you will receive a weekly email newsletter containing information about upcoming events.</p>
         </section>
 
         <section class="help-faqs" id="I-do-not-want-weekly-email">
             <h2 class="section-body-headline">What happens if I don't want to receive the weekly email?</h2>
-            <p>If you don’t want to receive our weekly email newsletter, click the unsubscribe link at the bottom of the email.</p>
+            <p>If you no longer want to receive the weekly email newsletter, click the unsubscribe link at the bottom of the email.</p>
         </section>
 
         <section class="help-faqs" id="under-18">
             <h2 class="section-body-headline">I am under 18 - can I still be a member?</h2>
-            <p>No, you have to be 18 or over to sign up.</p>
+            <p>You have to be 18 or over to join.</p>
         </section>
 
         <section class="help-faqs" id="do-not-live-in-london">
@@ -106,7 +106,7 @@
 
         <section class="help-faqs" id="do-not-live-in-uk">
             <h2 class="section-body-headline">I don’t live in the UK - can I still be a member?</h2>
-            <p>Yes, Guardian Membership is open to anyone living anywhere in the world. And although our home is in London, we will be expanding membership and staging events for members in the USA and Australia.</p>
+            <p>Yes, Guardian Membership is open to anyone living anywhere in the world. And although our home is London, we will be extending membership and staging events for members in the USA and Australia.</p>
         </section>
 
         <section class="help-faqs" id="change-membership-tier">
@@ -131,17 +131,12 @@
 
         <section class="help-faqs" id="terms-conditions-of-membership">
             <h2 class="section-body-headline">What are the terms and conditions of membership?</h2>
-            <p>You can read our full set of terms and conditions <a href="http://www.theguardian.com/info/2014/sep/09/guardian-membership-terms-and-conditions" class="u-underline">here</a>.</p>
+            <p>You can read the full set of terms and conditions <a href="http://www.theguardian.com/info/2014/sep/09/guardian-membership-terms-and-conditions" class="u-underline">here</a>.</p>
         </section>
 
         <section class="help-faqs" id="wheelchair-access-for-venue">
             <h2 class="section-body-headline">How can I find out about disabled/wheelchair access for the venue?</h2>
-            <p>We only run events at venues that are accessible by wheelchair. You can indicate that you require accessibility information on the ticket booking form and we will contact you to go over the required access route before the event.</p>
-        </section>
-
-        <section class="help-faqs" id="retrospective-discount-on-event">
-            <h2 class="section-body-headline">I’ve already bought a ticket to an event. If I become a member can I get a retrospective discount?</h2>
-            <p>Unfortunately we can’t offer retrospective discounts.</p>
+            <p>We only run events at venues that are accessible by wheelchair. You can tell us that you require accessibility information on the ticket booking form and we will contact you to go over the access route before the event.</p>
         </section>
 
         <section class="help-faqs" id="have-a-question">
