Add CSS classes for A/B tests

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -40,7 +40,7 @@
         </div>
         <div class="package__item package__item-cta@if(mode == "promo" && showLearnMore) { package__item--promo}">
             @if(mode == "promo") {
-                <a class="action action-cta" href="/join/@tier.toString.toLowerCase/enter-details">Become a @tier</a>
+                <a class="action action-cta js-opt-become-member" href="/join/@tier.toString.toLowerCase/enter-details">Become a @tier</a>
                 @if(showLearnMore) {
                     @if(tier == Tier.Patron) {
                         <a class="action action--secondary-button" href="/patrons">Learn more about @{tier}s</a>
