--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -12,8 +12,8 @@
         case Completed => { <button class='action action--disabled js-ticket-cta' disabled='disabled'>Past Event</button> }
         case SoldOut => { <button class='action action--disabled js-ticket-cta' disabled='disabled'>Sold Out</button> }
         case Cancelled => { <button class='action action--disabled js-ticket-cta' disabled='disabled'>Cancelled</button> }
-        case PreLive => { <button class='action action--disabled js-ticket-cta' disabled='disabled'>Buy Tickets</button> }
-        case _ => { <a class='action js-ticket-cta' href='/event/@event.id/buy'>Buy Tickets</a> }
+        case PreLive => { <button class='action action--disabled js-ticket-cta js-opt-become-member' disabled='disabled'>Buy Tickets</button> }
+        case _ => { <a class='action js-ticket-cta js-opt-become-member' href='/event/@event.id/buy'>Buy Tickets</a> }
     }
 }
 
