changes to padding on sales end element

--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -11,7 +11,7 @@ div.event {
         }
 
         .event__sale-ends {
-            padding-top: rem($gs-baseline);
+            padding: rem($gs-baseline) 0 rem(20px);
         }
 
         .event__content__masthead {
