--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -2,9 +2,9 @@
 
 @import com.gu.membership.salesforce.Tier
 @import model.Benefits
-@import model.Eventbrite.EBEventStatus._
 @import views.support.Dates._
 @import helper._
+@import model.Eventbrite._
 @import configuration.Config
 
 @benefit(tier: com.gu.membership.salesforce.Tier.Tier, defaultSelection: com.gu.membership.salesforce.Tier.Tier) = {
