--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -85,7 +85,7 @@
 
                     *@<div class="event-item__meta">
                         <h2 class="event-item__title">
-                            @if(event.getStatus == SoldOut){
+                            @if(event.isSoldOut){
                                 <span class="event-status--sold-out">Sold Out</span>
                             }
                             @event.name.text
