--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -189,7 +189,7 @@ $c-statusNeutral: $c-neutral2;
 $c-statusNegative: #da1d1d;
 
 @import 'components/bower-components/guss-colours/_colours.scss';
-@import 'components/bower-components/guss-colours/_helpers.scss';
+@import 'components/bower-components/guss-colours/_colours.helpers.scss';
 
 // MPU
 // =============================================================================
