added colour variables

--- a/frontend/assets/stylesheets/_content.scss
+++ b/frontend/assets/stylesheets/_content.scss
@@ -32,7 +32,7 @@
 }
 
 .content__container--border {
-    border-top: rem(1px) dotted guss-colour('neutral-5');
+    border-top: rem(1px) dotted $c-neutral5;
 }
 
 .content__container--border-dark {
