--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -120,6 +120,14 @@ $fs-textSans: (
 
 // Colours
 // =============================================================================
+// TODO - clean up the colours in this file, potentially abstract into own file and use guss-colour() mixin and
+// TODO - new way of doing things
+@import 'components/bower-components/guss-colours/_colours.scss';
+@import 'components/bower-components/pasteup-palette/src/_palette';
+@import 'components/bower-components/guss-colours/_colours.helpers.scss';
+
+$error: guss-colour(error, $pasteup-palette);
+
 
 $c-brandBlue: #214583;
 $c-brandLightBlue: #94b1ca;
@@ -133,7 +141,7 @@ $c-neutral2: #767676;
 $c-neutral2-contrasted: darken($c-neutral2, 3%);
 $c-neutral3: #bdbdbd;
 $c-neutral4: #dcdcdc;
-$c-neutral5: #dfdfdf;
+$c-neutral5: guss-colour('neutral-5', $pasteup-palette);
 $c-neutral6: #eaeaea;
 $c-neutral7: #f1f1f1;
 $c-neutral8: #f6f6f6;
