Made changes to form fonts and replaced previous font vars with latest guss-webfonts

--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -56,67 +56,60 @@ $mq-breakpoints: (
 // Fonts
 // =============================================================================
 
-$sans-serif: 'AgateSans', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-$serif: 'EgyptianText', georgia, serif;
-$serifheadline: 'EgyptianHeadline', georgia, serif;
-$text-sans: 'TextSans', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+$f-data: 'Guardian Agate Sans 1 Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
+$f-serif-text: 'Guardian Text Egyptian Web', Georgia, serif !default;
+$f-serif-headline: 'Guardian Egyptian Web', Georgia, serif !default;
+$f-sans-serif-text: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
+$f-sans-serif-headline: 'Guardian Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
 
 // Font scale
 // Usage:
 // font-size (px) line-height (px) // level
-$fs-headers: (
-        16 20, // 1
-        18 24, // 2
-        20 28, // 3
-        22 28, // 4
-        24 28  // 5
-);
-
-$fs-headlines: (
-        16 20, // 1
-        20 24, // 2
-        24 28, // 3
-        28 32, // 4
-        32 36, // 5
-        36 40, // 6
-        40 44, // 7
-        44 48, // 8
-        28 34, // 9 - brochure copy
-        20 26  // 10 - brochure copy-mobile
-);
-
-$fs-bodyHeadings: (
-        14 22, // 1
-        16 24, // 2
-        18 28, // 3
-        20 28, // 4
-        22 32  // 5
-);
-
-$fs-bodyCopy: (
-        14 20, // 1
-        14 22, // 2
-        16 24, // 3
-        18 28, // 4
-        28 34, // 5 - blockquotes
-        20 26  // 6 - blockquotes-mobile
-);
-
-$fs-data: (
-        11 14, // 1
-        12 14, // 2
-        13 16, // 3
-        14 18, // 4
-        16 20, // 5
-        18 22  // 6
-);
-
-$fs-textSans: (
-        12 16, // 1
-        13 18, // 2
-        14 20, // 3
-        14 22  // 4
-);
+$font-scale: (
+    header: (
+        1: (font-size: 16, line-height: 20),
+        2: (font-size: 18, line-height: 24),
+        3: (font-size: 20, line-height: 24),
+        4: (font-size: 22, line-height: 28),
+        5: (font-size: 24, line-height: 28),
+    ),
+    headline: (
+        1: (font-size: 14, line-height: 18),
+        2: (font-size: 16, line-height: 20),
+        3: (font-size: 20, line-height: 24),
+        4: (font-size: 24, line-height: 28),
+        5: (font-size: 28, line-height: 34),
+        6: (font-size: 32, line-height: 36),
+        7: (font-size: 36, line-height: 40),
+        8: (font-size: 40, line-height: 44),
+        9: (font-size: 44, line-height: 48),
+    ),
+    bodyHeading: (
+        1: (font-size: 14, line-height: 22),
+        2: (font-size: 16, line-height: 24),
+        3: (font-size: 18, line-height: 28),
+        4: (font-size: 20, line-height: 28),
+    ),
+    bodyCopy: (
+        1: (font-size: 14, line-height: 20),
+        2: (font-size: 16, line-height: 24),
+        3: (font-size: 18, line-height: 28),
+    ),
+    data: (
+        1: (font-size: 11, line-height: 14),
+        2: (font-size: 12, line-height: 14),
+        3: (font-size: 13, line-height: 16),
+        4: (font-size: 14, line-height: 18),
+        5: (font-size: 16, line-height: 20),
+        6: (font-size: 18, line-height: 22),
+    ),
+    textSans: (
+        1: (font-size: 12, line-height: 16),
+        2: (font-size: 13, line-height: 18),
+        3: (font-size: 14, line-height: 20),
+        4: (font-size: 14, line-height: 22),
+    )
+) !default;
 
 // Colours
 // =============================================================================
