--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -6,7 +6,7 @@
    ========================================================================== */
 
 html {
-    font-family: $serif;
+    font-family: $f-serif-text;
 
     // Set baseline font size to 10px
     // This is used as a baseline for rem (root ems) values
