--- a/frontend/assets/stylesheets/base/_forms.scss
+++ b/frontend/assets/stylesheets/base/_forms.scss
@@ -31,8 +31,8 @@
 
 .form__note,
 .form-field__note {
-    font-family: $sans-serif;
-    font-size: rem(13px);
+    font-family: $f-sans-serif-text;
+    font-size: rem(14px);
     margin-bottom: rem(8px);
 }
 
@@ -196,7 +196,7 @@
     @include box-sizing(border-box);
     color: $c-body;
     display: inline-block;
-    font-family: $sans-serif;
+    font-family: $f-sans-serif-text;
     font-size: rem(16px);
     padding: rem(8px) rem(8px) rem(7px);
     line-height: 1.4;
@@ -273,7 +273,7 @@
 .check-label,
 .radio-label {
     display: block;
-    font-family: $sans-serif;
+    font-family: $f-sans-serif-text;
     font-size: rem(13px);
     margin-bottom: rem($gs-baseline / 3);
     padding-left: rem($gs-gutter);
@@ -304,7 +304,7 @@
         vertical-align: middle;
         content: '*';
         color: $error;
-        font-family: $sans-serif;
+        font-family: $f-sans-serif-text;
         font-size: rem(18px);
         margin-left: rem(4px);
     }
@@ -355,14 +355,14 @@
 }
 
 .cvc-cta {
-    font-family: $sans-serif;
+    font-family: $f-sans-serif-text;
     font-size: rem(13px);
     line-height: rem(16px);
 }
 
 
 .cvc {
-    font-family: $sans-serif;
+    font-family: $f-sans-serif-text;
     padding: rem($gs-baseline / 2) rem($gs-baseline / 2) rem($gs-baseline / 2) 0;
     font-size: rem(13px);
     line-height: rem(16px);
@@ -374,7 +374,7 @@
     }
     .cvc__heading {
         font-weight: bold;
-        font-family: $sans-serif;
+        font-family: $f-sans-serif-text;
         font-size: rem(13px);
         line-height: rem(16px);
     }
