--- a/frontend/assets/stylesheets/layout/_footer.scss
+++ b/frontend/assets/stylesheets/layout/_footer.scss
@@ -98,7 +98,7 @@ footer {
 
 .l-footer__secondary {
     @include box-sizing(border-box);
-    @include font($sans-serif, normal, 13, 19);
+    @include font($f-sans-serif-text, normal, 13, 19);
     @include rem((
         padding-right: $gs-gutter / 2,
         padding-left: $gs-gutter / 2
