matching against country name instead of country code

--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -42,7 +42,7 @@ county: Option[String], userCountry: Option[String])
                         data-validation="required">
 
                         @for(country <- Countries.allSorted) {
-                            <option value="@country.alpha2"@if(userCountry.getOrElse("") == country.alpha2){ selected}>@country.name</option>
+                            <option value="@country.alpha2"@if(userCountry.getOrElse("") == country.name){ selected}>@country.name</option>
                         }
                     </select>
                 </div>
