--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -1,4 +1,4 @@
-@(card: model.Stripe.Card, subscriptionDetails: model.Zuora.SubscriptionDetails, ebIFrameDetail: Option[(String, Int)], tier: com.gu.membership.salesforce.Tier.Tier)
+@(card: model.Stripe.Card, subscriptionDetails: model.Zuora.SubscriptionDetails, ebIFrameDetail: Option[(String, Int)], tier: com.gu.membership.salesforce.Tier.Tier, userFields: model.PrivateFields, userEmail: String, event: Option[model.Eventbrite.EBEvent])
 
 @import views.support.Dates._
 @import views.support.Prices._
@@ -7,10 +7,10 @@
 
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
         @fragments.tickets.ticketsFunnel(4, StepOne = "", StepTwo = "", StepThree = "")
-        <h1 class="section-sub-headline">Hello! Welcome to Guardian Membership</h1>
-        @fragments.layout.welcomeUser()
+        @fragments.layout.welcomeUser(userFields, userEmail)
     </section>
 
+    <h2>Your membership summary</h2>
     <section class="joiner-section joiner-section--no-border">
         <table class="table table--responsive-font table--striped">
             <tr class="table__headline" role="row">
@@ -65,7 +65,7 @@
         </table>
     </section>
 
-    @fragments.joiner.completePurchase(ebIFrameDetail)
+    @fragments.joiner.completePurchase(ebIFrameDetail, event)
 
     @fragments.analytics.googleJoinerConversion(tier)
 }
