Update thankyou heading markup

--- a/frontend/app/views/fragments/joiner/completePurchase.scala.html
+++ b/frontend/app/views/fragments/joiner/completePurchase.scala.html
@@ -1,8 +1,8 @@
 @(ebIFrameDetail: Option[(String, Int)], event: Option[model.Eventbrite.EBEvent])
 
 @if(event) {
-    <section class="complete-purchase">
-        <h2>Complete your ticket purchase</h2>
+    <section class="content__container content__container--border-blue">
+        <h2 class="section-sub-headline">Complete your ticket purchase</h2>
         <p>We're currently improving our ticket purchasing system, in the meantime you will have to enter some details again. We'll have a much smoother solution soon.</p>
     </section>
 
