--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -2,8 +2,7 @@
 
 @main("Thankyou | Friend") {
 
-    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
-        @fragments.tickets.ticketsFunnel(4, StepOne = "", StepTwo = "", StepThree = "")
+    <section class="content__container">
         @fragments.layout.welcomeUser(userFields, userEmail)
     </section>
 
