--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -11,52 +11,52 @@
 
     <section class="content__container content__container--border-blue">
         <h2 class="section-sub-headline">Your membership summary</h2>
-        <table class="table table--responsive-font table--striped">
-            <tr class="table__headline" role="row">
-                <td class="summary-table__cell" role="scope">
+        <table class="table table--responsive-font table--striped" role="grid">
+            <tr role="row">
+                <th role="rowheader">
                     Tier
-                </td>
-                <td class="summary-table__cell" role="scope">
+                </th>
+                <td>
                     @subscriptionDetails.planName
                 </td>
             </tr>
-            <tr class="summary-table__row" role="row">
-                <td class="summary-table__cell">
+            <tr role="row">
+                <th role="rowheader">
                     Start Date
-                </td>
-                <td class="summary-table__cell">
+                </th>
+                <td>
                     @subscriptionDetails.startDate.pretty
                 </td>
             </tr>
-            <tr class="summary-table__row" role="row">
-                <td class="summary-table__cell">
+            <tr role="row">
+                <th role="rowheader">
                     Amount Paid Today
-                </td>
-                <td class="summary-table__cell">
+                </th>
+                <td>
                     @subscriptionDetails.planAmount.pretty
                 </td>
             </tr>
-            <tr class="summary-table__row" role="row">
-                <td class="summary-table__cell">
+            <tr role="row">
+                <th role="rowheader">
                     @if(subscriptionDetails.annual){ Annual } else { Monthly } Payment
-                </td>
-                <td class="summary-table__cell">
+                </th>
+                <td>
                     @subscriptionDetails.planAmount.pretty
                 </td>
             </tr>
-            <tr class="summary-table__row" role="row">
-                <td class="summary-table__cell">
+            <tr role="row">
+                <th role="rowheader">
                     Next Payment
-                </td>
-                <td class="summary-table__cell">
+                </th>
+                <td>
                    @subscriptionDetails.endDate.pretty
                 </td>
             </tr>
-            <tr class="summary-table__row" role="row">
-                <td class="summary-table__cell">
+            <tr role="row">
+                <th role="rowheader">
                     Card
-                </td>
-                <td class="summary-table__cell">
+                </th>
+                <td>
                     <span class="credit-card credit-card--inline-block icon-sprite @("icon-sprite-card-" + card.`type`.toLowerCase().replace(' ', '-'))"></span>
                     <span>&bullet;&bullet;&bullet;&bullet; &bullet;&bullet;&bullet;&bullet; &bullet;&bullet;&bullet;&bullet; @card.last4</span>
                 </td>
