Add event summary styles

--- a/frontend/app/views/fragments/joiner/completePurchase.scala.html
+++ b/frontend/app/views/fragments/joiner/completePurchase.scala.html
@@ -7,7 +7,7 @@
     </section>
 
     @for(event <- event) {
-        <h3>@event.name.text</h3>
+        @fragments.event.itemSummary(event)
     }
 
     @for((eventIFrameUrl, eventIFrameTicketQty) <- ebIFrameDetail) {
